new dev : create 3 new program for circulation :
branchreserves : to see reserves for one library (with the branchip selection or librarian preferences)

currenttransfers : show all the transfers are waiting in the library

waitingreservetransfers: show all the book the librarian have to transfer to an another library .

"actions" are bugged, will be corrected .

--- a/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
@@ -7,14 +7,19 @@
 			<li><a href="/cgi-bin/koha/circ/circulation.pl">Issues</a></li>
 			<li><a href="/cgi-bin/koha/circ/returns.pl">Returns</a></li>
 			<li><a href="/cgi-bin/koha/circ/branchtransfers.pl">Transfers</a></li>
-			<li><a href="/cgi-bin/koha/circ/selectbranchprinter.pl">Set Branch</a></li>
+			<li><a href="/cgi-bin/koha/circ/selectbranchprinter.pl">Set branch</a></li>
+			<li><a href="/cgi-bin/koha/circ/branchreserves.pl">Waiting reserves</a></li>
+			<li><a href="/cgi-bin/koha/circ/waitingreservestransfers.pl">Transfers to do</a></li>
+			<li><a href="/cgi-bin/koha/circ/currenttransfers.pl">Transfers to recieve</a></li>
 		</ul>
 	</li>
 	<li>Members
 		<ul>
-			<li><a href="/cgi-bin/koha/members/members-home.pl">Member Search</a></li>
-			<li><a href="/cgi-bin/koha/members/memberentry.pl?actionType=Add">Add Member</a></li>
-			<li><a href="/cgi-bin/koha/members/memberentry.pl?categorycode=I&actionType=Add">Add Institution</a></li>
+			<li><a href="/cgi-bin/koha/members/members-home.pl">Search</a></li>
+ 			<li><a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=A"/>Add adult</a></li>
+ 			<li><a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=C"/>Add child</a></li>
+ 			<li><a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=P"/>Add prof</a></li>
+ 			<li><a href="/cgi-bin/koha/members/memberentry.pl?op=add&category_type=I"/>Add org</a></li>
 		</ul>
 	</li>
 	<li>Catalogue
