--- a/koha-tmpl/intranet-tmpl/prog/en/circ/branchtransfers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/branchtransfers.tmpl
@@ -1,4 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Circulation: Transfers<!-- TMPL_INCLUDE NAME="doc-head-circ-close.inc" -->
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
 
 <h1>Circulation: Transfers</h1>
