--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -5,6 +5,7 @@
 <!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
 
 <h1>Circulation: Issues</h1>
