--- a/koha-tmpl/intranet-tmpl/prog/en/circ/returns.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/returns.tmpl
@@ -1,6 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Circulation: Returns<!-- TMPL_IF Name="returned" -->: <!-- TMPL_VAR Name="itemtitle" --><!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
 
 <!-- TMPL_IF Name="found" -->
