--- a/koha-tmpl/intranet-tmpl/prog/en/admin/auth_subfields_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/auth_subfields_structure.tmpl
@@ -4,53 +4,48 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
-<!-- TMPL_IF NAME="add_form" -->
-	<h1>
-	<!-- TMPL_IF NAME="use-heading-flags-p" -->
-	<!-- TMPL_IF NAME="heading-edit-subfields-p" -->Edit subfields<!-- /TMPL_IF -->
-	<!-- TMPL_ELSE --><!-- TMPL_VAR NAME="action" --><!-- /TMPL_IF -->
-	</h1>
+!-- TMPL_IF NAME="add_form" -->
+
+	<h1><!-- TMPL_IF NAME="use-heading-flags-p" -->
+	<!-- TMPL_IF NAME="heading-edit-subfields-p" -->Edit MARC subfields constraints<!-- /TMPL_IF -->
+	<!-- TMPL_ELSE --><!-- TMPL_VAR NAME="action" --><!-- /TMPL_IF --></h1>
 	<form action="<!-- TMPL_VAR NAME="script_name" -->" name="Aform" method="post">
 	<input type="hidden" name="op" value="add_validate" />
 	<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->" />
-	<table>
 	<!-- TMPL_LOOP NAME="loop" -->
-		<tr>
-		<td>
-			<h2>Tag <!-- TMPL_VAR NAME="tagfield" -->, Subfield <!-- TMPL_VAR NAME="tagsubfield" --></h2>
-			<h3>MARC constraints</h3>
-			<p>
-				<!-- TMPL_VAR NAME="repeatable" --> repeatable 
-				<!-- TMPL_VAR NAME="mandatory" --> mandatory
-			</p>
-			<p>
-				
-				<label>Search also</label><input type="text" name="seealso" value="<!-- TMPL_VAR name="seealso" -->" size="20" /> (example for 200a : '200c','200d','200e')
-			</p>
-			<h3>Editor constaints</h3>
-			<p> 
-				<label>Text for librarian</label>
-				<input type="text" name="liblibrarian" value="<!-- TMPL_VAR NAME="liblibrarian" -->" size="40" maxlength="80" />
-			</p>
-			<p>
-				
-				<label>Text for OPAC</label> <input type="text" name="libopac" value="<!-- TMPL_VAR NAME="libopac" -->" size="40" maxlength="80" />
-			</p>
-			<p><label>Managed</label> <!-- TMPL_VAR NAME="tab" --></p>
-			<p><!-- TMPL_VAR NAME="hidden" --> hidden (subfield is managed, but hidden. -should be filled by a plugin or thesaurus-)</p>
-			<p><!-- TMPL_VAR NAME="isurl" --> URL (if checked, it means that the subfield is an URL and can be clicked</p>
-			<p>
-				<label>Auth value:</label> <!-- TMPL_VAR NAME="authorised_value" -->
-				or thesaurus: <!-- TMPL_VAR NAME="thesaurus_category" -->
-				or plugin: <!-- TMPL_VAR NAME="value_builder" -->
-			</p>
-		</td>
-		</tr>
+	<div class="data <!-- TMPL_VAR NAME="toggle" -->"><h2>Tag <!-- TMPL_VAR NAME="tagfield" -->, Subfield <!-- TMPL_VAR NAME="tagsubfield" --></h2>
+	<table>
+	<caption>MARC constraints</caption>
+	<tr><th><label for="repeatable<!-- TMPL_VAR NAME="row" -->">Repeatable:</label></th><td><!-- TMPL_VAR NAME="repeatable" --></td></tr>
+	<tr><th><label for="mandatory<!-- TMPL_VAR NAME="row" -->">Mandatory:</label></th><td><!-- TMPL_VAR NAME="mandatory" --> </td></tr>
+	<tr><th><label for="seealso<!-- TMPL_VAR NAME="row" -->">Search also:</label></th><td><input type="text" id="seealso<!-- TMPL_VAR NAME="row" -->" name="seealso" value="<!-- TMPL_VAR name="seealso" -->" size="20" /> (example for 200a: '200c','200d','200e'...)</td></tr>
+	<tr><th><label for="kohafield<!-- TMPL_VAR NAME="row" -->">Koha link:</label></th><td><!-- TMPL_VAR NAME="kohafield" --></td></tr>
+			</table>
+	<table>
+	<caption>Editor constaints</caption>
+	<tr><th><label for="liblibrarian<!-- TMPL_VAR NAME="row" -->">Text for librarian:</label></th><td><input id="liblibrarian<!-- TMPL_VAR NAME="row" -->" type="text" name="liblibrarian" value="<!-- TMPL_VAR NAME="liblibrarian" -->" size="40" maxlength="80" /></td></tr>
+	<tr><th><label for="libopac<!-- TMPL_VAR NAME="row" -->">Text for OPAC:</label></th><td><input type="text" id="libopac<!-- TMPL_VAR NAME="row" -->" name="libopac" value="<!-- TMPL_VAR NAME="libopac" -->" size="40" maxlength="80" /></td></tr>
+	<tr><th><label for="tab<!-- TMPL_VAR NAME="row" -->">Managed in tab:</label></th><td><!-- TMPL_VAR NAME="tab" --> (ignore means that the subfield is NOT managed by Koha)</td></tr>
+
+	<tr><th><label for="hidden<!-- TMPL_VAR NAME="row" -->">Hidden:</label></th><td> Opac:<!-- TMPL_VAR name="ohidden" -->  Intranet:<!-- TMPL_VAR name="ihidden" --> Editor:<!-- TMPL_VAR name="ehidden" --> (see online help)</td></tr>
+
+	<tr><th><label for="isurl<!-- TMPL_VAR NAME="row" -->">Is a URL: </label></th><td><!-- TMPL_VAR NAME="isurl" --> (if checked, it means that the subfield is an URL and can be clicked</td></tr>
+	<tr><th><label for="link<!-- TMPL_VAR NAME="row" -->">Is a Linking field: </label></th><td><!-- TMPL_VAR NAME="link" --> (if checked, it means that the subfield is used for linking authorities</td></tr>
+
+<tr><th><label>Default Options: <p>(choose one)</p></label></th><td>
+<ul>
+	<li>Authorized Value: <!-- TMPL_VAR NAME="authorised_value" --></li>
+	<li>Thesaurus: <!-- TMPL_VAR NAME="authtypecode" --></li>
+	<li>Plugin: <!-- TMPL_VAR NAME="value_builder" --></li>
+</ul>
+</td></tr>	 
+		</table>
+		</div>
 	<!-- /TMPL_LOOP -->
-	</table>
-	<input type="submit" value="OK" class="button parameters">
+	<input type="submit" class="submit" value="Save Changes" />
 	<p>Note: in the last column, you can choose:
 	<ul><li>An "authorised value": it refers to a list of authorised values for this subfield. See the corresponding admin table.</li>
+	<li>A "thesaurus category": it refers to a thesaurus category. See the corresponding admin table.</li>
 	<li>A "value builder": values builders are perl programs that help you select the value of the field. They are MARC-flavor dependant and sometimes fill another subfield automatically.</li>
 	</ul>
 	</p>
@@ -59,31 +54,34 @@
 
 <!-- TMPL_IF NAME="delete_confirm" -->
 
-<div id="bloc25">
-	<h2>
-		Subfield <!-- TMPL_VAR NAME="tagsubfield" -->
-		<!-- TMPL_VAR NAME="liblibrarian" -->
-	</h2>
-	<form action="<!-- TMPL_VAR NAME="delete_link" -->" method="post">
-		<input type="hidden" name="op" value="delete_confirmed" />
-		<input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" />
-		<input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->" />
-		<input type="hidden" name="tagsubfield" value="<!-- TMPL_VAR NAME="tagsubfield" -->" />
-		<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->" />
-		<p>CONFIRM DELETION</p>
-		<input type="submit" value="YES" />
-	</form>
-	<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-		<input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->" />
-		<input type="submit" value="NO" />
-	</form>
+<div class="data"><table>
+<caption>Confirm Deletion of Subfield <span class="ex"><!-- TMPL_VAR NAME="tagsubfield" -->?</span></caption>
+	<tr>
+		<th>Subfield</th>
+		<td><!-- TMPL_VAR NAME="tagsubfield" --></td>
+	</tr>
+	<tr><th>Description</th><td><!-- TMPL_VAR NAME="liblibrarian" --></td></tr>
+</table></div>
+			<form class="inline" action="<!-- TMPL_VAR NAME="delete_link" -->" method="post"><input type="hidden" name="op" value="delete_confirmed" />
+				<input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" />
+				<input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->" /><input type="hidden" name="tagsubfield" value="<!-- TMPL_VAR NAME="tagsubfield" -->" /><input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->" /><input type="submit" class="cancel" value="Yes, Delete this Subfield" />
+			</form> <form class="inline" action="<!-- TMPL_VAR NAME="script_name" -->" method="post">	<input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" />	<input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->" />	<input type="hidden" name="tagsubfield" value="<!-- TMPL_VAR NAME="tagsubfield" -->" />	<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->" />	<input type="submit" class="submit" value="No, Do Not Delete" />
+			</form>
+<!-- /TMPL_IF -->
 
+<!-- TMPL_IF NAME="delete_confirmed" -->
+
+	Data deleted
+	<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post"><input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->">
+	<input type="submit" class="submit" value="OK" />
+	</form>
 <!-- /TMPL_IF -->
 
 
 <!-- TMPL_IF NAME="else" -->
-<h1>Authority MARC subfield structure admin for tag <!-- TMPL_VAR NAME="tagfield" --> <!-- TMPL_IF NAME="authtypecode" -->(framework <!--TMPL_VAR NAME="authtypecode" -->)<!-- TMPL_ELSE -->(default framework)<!-- /TMPL_IF --></h1>
+<h1>Authority MARC subfield structure admin for <!-- TMPL_VAR NAME="tagfield" --> (authority: <!--TMPL_VAR NAME="authtypecode" -->)</h1>
 <p>This screen shows the subfields associated with the selected tag. You can edit subfields or add a new one by clicking on edit. </p>
+<p>The column <b>Koha field</b> shows that the subfield is linked with a Koha field. Koha can manage a MARC interface, and a Koha interface. This link ensures that both DB are synchronized</p>
 
 <table>
 <tr>
@@ -92,7 +90,7 @@
 	<th>Constraints</th>
 	<th>Delete</th>
 <!-- TMPL_LOOP NAME="loop" -->
-<tr>
+<!-- TMPL_IF NAME="toggle" --><tr class="highlighted"><!-- TMPL_ELSE --><tr><!-- /TMPL_IF -->
 	<td><!-- TMPL_VAR NAME="tagsubfield" --></td>
 	<td>
 		<!-- TMPL_IF NAME="subfield_ignored" -->
@@ -105,28 +103,31 @@
 		<!-- TMPL_IF NAME="subfield_ignored" -->
 			<i>subfield ignored</i>
 		<!-- TMPL_ELSE -->
-			Managed, <!-- TMPL_IF NAME="repeatable" -->Repeatable, <!-- TMPL_ELSE -->Not repeatable,<!-- /TMPL_IF -->
+			<strong>Tab:</strong><!-- TMPL_VAR NAME="tab" -->,
+			<!-- TMPL_IF NAME="kohafield" --> | <strong>Koha field:</strong> <!-- TMPL_VAR NAME="kohafield" -->, <!--/TMPL_IF -->
+			<!-- TMPL_IF NAME="repeatable" -->Repeatable, <!-- TMPL_ELSE -->Not repeatable,<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="mandatory" -->Mandatory, <!-- TMPL_ELSE -->Not mandatory,<!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="seealso" -->see also : <!-- TMPL_VAR NAME="seealso" -->,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="seealso" --> | <strong>See Also:</strong> <!-- TMPL_VAR NAME="seealso" -->,<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="hidden" -->hidden,<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="isurl" -->is an url,<!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="authorised_value" --> Auth value :<!-- TMPL_VAR NAME="authorised_value" -->,<!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="value_builder" -->Plugin :<!-- TMPL_VAR NAME="value_builder" -->,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="authorised_value" --> | <strong>Auth value:</strong><!-- TMPL_VAR NAME="authorised_value" -->,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="authtypecode" --> | <strong>Authority:</strong><!-- TMPL_VAR NAME="authtypecode" -->,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="value_builder" --> | <strong>Plugin:</strong><!-- TMPL_VAR NAME="value_builder" -->,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="link" --> | <strong>Link:</strong><!-- TMPL_VAR NAME="link" -->,<!-- /TMPL_IF -->
 		<!-- /TMPL_IF -->
 	</td>
-	<td>
-		<a href="<!-- TMPL_VAR NAME="delete" -->">Delete</a>
-	</td>
+	<td><a href="<!-- TMPL_VAR NAME="delete" -->">Delete</a></td>
 </tr>
 <!-- /TMPL_LOOP -->
 </table>
-<!-- TMPL_VAR NAME="edit" -->Edit</a>
-<a href="auth_tag_structure.pl?searchfield=<!-- TMPL_VAR NAME="tagfield" -->&amp;authtypecode=<!-- TMPL_VAR NAME="authtypecode" -->">
-	<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/2uparrow.png" width="32" hspace="0" vspace="0" border="0">
-</a>
-<!-- TMPL_IF NAME="previous" --><!-- TMPL_VAR NAME="previous" -->&lt;&lt; Previous</a><!-- /TMPL_IF -->
+<form class="inline" action="<!-- TMPL_VAR NAME="script_name" -->" method="get"><input type="hidden" name="op" value="add_form" /><input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="edit_tagfield" -->" /><input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="edit_authtypecode" -->" /><input type="submit" class="submit" value="Edit Subfields" /></form> <form class="inline" action="auth_tag_structure.pl" method="get"><input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="tagfield" -->" /><input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->" /><input type="submit" class="submit" value="Return to Auth Structure" /></form>
+<!-- TMPL_IF NAME="previous" -->
+	<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1leftarrow.png" title="previous" alt="previous" border="0" >
+	</a><!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="next" -->
-	<!-- TMPL_VAR NAME="next" -->Next &gt;&gt;</a>
+	<!-- TMPL_VAR NAME="next" -->
+		<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1rightarrow.png" title="next" alt="next" border="0" />
+	</a>
 <!-- /TMPL_IF -->
 <!-- /TMPL_IF -->
 
