More work on the multiple organisations

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -434,7 +434,7 @@
 			<input type="text" name="fax" value="<!-- TMPL_VAR NAME="fax" -->" >
 		</p>
 	</fieldset>
-	<!-- TMPL_IF NAME="memberinstution" -->
+	<!-- TMPL_IF NAME="memberofinstution" -->
 	<fieldset id="memberentry_organisation">
 		<legend>Organisations</legend>
 		<p>
