--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -505,6 +505,7 @@
 	<input type="hidden" name="fax"  value="<!-- TMPL_VAR NAME="fax" -->"> 
 	<input type="hidden" name="email" value="<!-- TMPL_VAR NAME="email" -->" >
 	<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
+	<input type="hidden" name="organisations" value="<!-- TMPL_VAR NAME="organisations" -->" >	
 	<!-- TMPL_IF NAME="opadd" -->
 		<input type="hidden" name="op" value="add">
 	<!-- TMPL_ELSE -->
