adding cities & roadtype menus in Parameters menu (from SAN-OP)

--- a/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
@@ -38,6 +38,15 @@
 	<td>Define the categories of borrowers.</td>
 </tr>
 <tr>
+	<th><a href="/cgi-bin/koha/admin/cities.pl">City</a></th>
+	<td>Define citie</td>
+</tr>	
+<tr>
+	<th><a href="/cgi-bin/koha/admin/roadtype.pl" >Road Type</a>
+	</th>
+	<td>Define road type</td>
+</tr>
+<tr>
 	<th><a href="/cgi-bin/koha/admin/issuingrules.pl">Issuing rules</a></th>
 	<td>Define issuing rules for branches / borrowers / item types (nb of issues, duration, cost...)</td>
 </tr>
