Fixing a couple of syntax errors

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryI.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryI.tmpl
@@ -343,12 +343,12 @@
 		<input type="hidden" name="address"  value="<!-- TMPL_VAR NAME="address" -->">
 		<input type="hidden" name="address2"  value="<!-- TMPL_VAR NAME="address2" -->">	
 		<input type="hidden" name="zipcode"  value="<!-- TMPL_VAR NAME="zipcode" -->">	
-		<input type="hidden" name="city"  value="<!-- TMPL_VAR NAME="city" -->
+		<input type="hidden" name="city"  value="<!-- TMPL_VAR NAME="city" -->">
 		<input type="hidden" name="branchcode"  value="<!-- TMPL_VAR NAME="branchcode" -->">
 		<input type="hidden" name="phonepro" value="<!-- TMPL_VAR NAME="phonepro" -->" >
 		<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
 		<textarea style="display:none;" name="contactnotes" cols="70" rows="3"  ><!-- TMPL_VAR NAME="contactnotes" --></textarea>
-		<input type="hidden" name="fax"   value="<!-- TMPL_VAR NAME="fax" -->"
+		<input type="hidden" name="fax" value="<!-- TMPL_VAR NAME="fax" -->">
 		
 		<!-- TMPL_IF NAME="opadd" -->
 			<input type="hidden" name="op" value="add">
