bug fixing : syntax error in url to access at stats.pl

--- a/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
@@ -49,9 +49,9 @@
 			</li>
 			<li>Circulation Statistics
 				<ul>
-					<li><a href="/cgi-bin/koha/stats.pl?time=yesterday">Till Reconcipation: Daily Report (yesterday)</a></li>
-					<li><a href="/cgi-bin/koha/stats.pl?time=today">Till Reconcipation: Daily Report (today)</a></li>
-					<li><a href="/cgi-bin/koha/overdue.pl">Overdue items</a></li>
+					<li><a href="/cgi-bin/koha/reports/stats.pl?time=yesterday">Till Reconcipation: Daily Report (yesterday)</a></li>
+					<li><a href="/cgi-bin/koha/reports/stats.pl?time=today">Till Reconcipation: Daily Report (today)</a></li>
+					<li><a href="/cgi-bin/koha/reports/overdue.pl">Overdue items</a></li>
 				</ul>
 			</li>
 			<li>Statistics Wizards
