bug fix : rank request of reserves by biblio is correct . now we can reserve with items, and biblios with rank-request .

--- a/koha-tmpl/intranet-tmpl/prog/en/reserve/request.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reserve/request.tmpl
@@ -153,7 +153,7 @@ if (alreadyreserved > "0"){
       <tr>
         <th><label for="priority">Priority</label></th>
         <td>
-          <select name="priority">
+          <select name="rank-request">
 <!-- TMPL_LOOP Name="optionloop" -->
   <!-- TMPL_IF Name="selected" -->
             <option value="<!-- TMPL_VAR NAME="num" -->" selected="selected"><!-- TMPL_VAR NAME="num" --></option>
