Allows a person to choose an associated borrower (orgranisation) when Issuing. This is to allow a person who is associated with many organisations to choose the one he/she is borrowing an item for
No changes to the issuing code, or the issues table, the associated borrower number is stored in the statistics table

--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -297,6 +297,9 @@
       <tr>
         <th><label for="barcode">Enter Item Barcode: </label></th>
         <td><input name="barcode" size="14" /></td>
+	<!-- TMPL_IF NAME="memberofinstution" -->
+	<td><!-- TMPL_VAR NAME="CGIorganisations" --></td>
+	<!-- /TMPL_IF -->
       </tr>
 
       <tr>
