--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -9,7 +9,7 @@
 	<!-- TMPL_UNLESS name="guarantorborrowernumber" -->
 	<a href="/cgi-bin/koha/members/jmemberentry.pl?type=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Add child</a> 
 	<!-- /TMPL_UNLESS -->
-	<a href="/cgi-bin/koha/members/imemberentry.pl?borrowernumber=<!-- TMPL_VAR NAME="bornum" -->">
+	<a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!-- TMPL_VAR NAME="bornum" -->&category_type=<!-- TMPL_VAR NAME="category_type"-->">
 		Edit this Record
 	</a> 
 	<a href="/cgi-bin/koha/members/member-password.pl?member=<!-- TMPL_VAR NAME=bornum -->">
