--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -20,9 +20,9 @@
 		<form name="form_double">
 			<div id="problem">
 				Duplicate suspected 
-				<a href="javascript:Dopop('borrowers_details.pl?borrowerid=<!--TMPL_VAR NAME="check_member"-->');" >Detail</a>
+				<a href="javascript:Dopop('borrowers_details.pl?borrowernumber=<!--TMPL_VAR NAME="check_member"-->');" >Detail</a>
 				Duplicate ?
-				<a href="/cgi-bin/koha/members/memberentry.pl?borrowerid=<!--TMPL_VAR NAME="check_member"-->&category_type=<!--TMPL_VAR NAME="check_categorytype"-->">Yes</a> 
+				<a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!--TMPL_VAR NAME="check_member"-->&category_type=<!--TMPL_VAR NAME="check_categorytype"-->">Yes</a> 
 				&nbsp;&nbsp;&nbsp; No, it is not
 				<!-- TMPL_IF NAME="checked"-->
 					<input type="checkbox" checked name="answernodouble" >
@@ -62,7 +62,7 @@
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
 	<input type="hidden" name="flags" value="<!-- TMPL_VAR NAME="flags" -->" />
-	<input type="hidden" name="borrowerid" value="<!-- TMPL_VAR NAME="borrowerid" -->">
+	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
 	<input type="hidden" name="nodouble"  value="<!-- TMPL_VAR NAME="nodouble" -->" />
 	
 <!-- 	from form 2 -->
@@ -245,7 +245,7 @@
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
 	<input type="hidden" name="flags" value="<!-- TMPL_VAR NAME="flags" -->" />
-	<input type="hidden" name="borrowerid" value="<!-- TMPL_VAR NAME="borrowerid" -->">
+	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
 	<input type="hidden" name="nodouble"  value="<!-- TMPL_VAR NAME="nodouble" -->" />
 
 <!-- 	from form 1	 -->
@@ -471,7 +471,7 @@
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
 	<input type="hidden" name="flags" value="<!-- TMPL_VAR NAME="flags" -->" />
-	<input type="hidden" name="borrowerid" value="<!-- TMPL_VAR NAME="borrowerid" -->">
+	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
 	<input type="hidden" name="nodouble"  value="<!-- TMPL_VAR NAME="nodouble" -->" />
 
 <!-- 	from form 1	 -->
